fixed the spacing with the home link in the systems tab

--- a/css_files/styles.css
+++ b/css_files/styles.css
@@ -2,7 +2,8 @@
 #wrapper {
     margin-left:auto;
     margin-right:auto;
-    width:1300px;
+    min-width: 1300px;
+    max-width: 1920px;
 }
 
 html, body {
@@ -87,10 +88,10 @@ li a:hover,a:visited,a:active {
 }
 
 .direct {
-    margin-top: 10%;
-    margin-left: 0%;
+    margin-top: 1%;
+    margin-left: 4%;
     font-weight: bold;
-    font-size: 105%;
+    font-size: 95%;
 }
 
 /*for the directory style*/
@@ -107,6 +108,5 @@ li a:hover,a:visited,a:active {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 7%;
-    width: 70%;
+    width: 55%;
 }
